feat:add crud function

--- a/client/src/app/tree/info/info.component.html
+++ b/client/src/app/tree/info/info.component.html
@@ -3,6 +3,6 @@
   <div class="right-btn">
     <button mat-button class="close-btn" (click)="close()">x</button>
   </div>
-  <app-search></app-search>
-  <app-table></app-table>
+  <app-search [dataOb]="dataOb"></app-search>
+  <app-table [dataOb]="dataOb"></app-table>
 </div>
