--- a/client/src/app/tree/info/table/delete/delete.component.html
+++ b/client/src/app/tree/info/table/delete/delete.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <h1>Are you sure?</h1>
     <div class="btn">
-        <button>Yes</button>
-        <button>No</button>
+        <button (click)="deleteData()">Yes</button>
+        <button (click)="close()">No</button>
     </div>
 </div>
