--- a/client/src/app/tree/info/info.component.css
+++ b/client/src/app/tree/info/info.component.css
@@ -1,7 +1,7 @@
 .container {
   width: 1100px;
   height: 700px;
-  background-color: yellowgreen;
+  background-color: rgb(154, 205, 50);
   display: flex;
   flex-direction: column;
   align-items: center;
