--- a/client/src/app/tree/info/table/table.component.css
+++ b/client/src/app/tree/info/table/table.component.css
@@ -1,9 +1,11 @@
 .container {
   width: 800px;
+  height: 250px;
   border-radius: 10px;
   background-color: white;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   padding: 20px;
+  overflow: auto;
 }
 .add-btn {
   padding: 10px 16px;
