--- a/client/src/app/tree/info/table/table.component.html
+++ b/client/src/app/tree/info/table/table.component.html
@@ -1,35 +1,43 @@
 <div class="container">
-  <button class="add-btn" (click)="openAddGroup()">Add Group</button>
-  <div class="">
-    <table mat-table [dataSource]="dataSource">
-      <!-- Position Column -->
-      <ng-container matColumnDef="position">
+  <button class="add-btn" (click)="openAddGroup()">{{ btnName }}</button>
+  <div *ngIf="btnName == 'Add Group'">
+    <table mat-table [dataSource]="treeservice.data">
+      
+      <ng-container matColumnDef="Groupname">
         <th mat-header-cell *matHeaderCellDef>Groupname</th>
-        <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.headerName }}</td>
       </ng-container>
 
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
+  
+      <ng-container matColumnDef="Icon">
         <th mat-header-cell *matHeaderCellDef>Icon</th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.icon }}</td>
       </ng-container>
 
-      <!-- Weight Column -->
-      <ng-container matColumnDef="weight">
+     
+      <ng-container matColumnDef="Activeflag">
         <th mat-header-cell *matHeaderCellDef>Activeflag</th>
-        <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.activeFlg }}</td>
       </ng-container>
 
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="action">
+     
+      <ng-container matColumnDef="Option">
         <th mat-header-cell *matHeaderCellDef>Option</th>
         <td mat-cell *matCellDef="let element">
-            <button mat-icon-button class="btn" (click)="openUpdateGroup()">
-                <mat-icon>edit</mat-icon>
-            </button>
-            <button mat-icon-button class="btn" (click)="openDeleteGroup()">
-                <mat-icon>delete</mat-icon>
-            </button>
+          <button
+            mat-icon-button
+            class="btn"
+            (click)="openUpdateGroup(element)"
+          >
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button
+            mat-icon-button
+            class="btn"
+            (click)="openDeleteGroup(element)"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
         </td>
       </ng-container>
 
@@ -37,11 +45,176 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
 
-    <mat-paginator
+    <!-- <mat-paginator
       [pageSizeOptions]="[5, 10, 20]"
       showFirstLastButtons
       aria-label="Select page of periodic elements"
       class="custom-pg"
-    ></mat-paginator>
+    ></mat-paginator> -->
+  </div>
+
+  <div *ngIf="btnName == 'Add Menu'">
+    <table mat-table [dataSource]="treeservice.data">
+   
+      <ng-container matColumnDef="menuName">
+        <th mat-header-cell *matHeaderCellDef>Menuname</th>
+        <td mat-cell *matCellDef="let element">{{ element.subMenuName }}</td>
+      </ng-container>
+
+      
+      <ng-container matColumnDef="Activeflag">
+        <th mat-header-cell *matHeaderCellDef>Activeflag</th>
+        <td mat-cell *matCellDef="let element">{{ element.activeFlg }}</td>
+      </ng-container>
+
+    
+      <ng-container matColumnDef="Option">
+        <th mat-header-cell *matHeaderCellDef>Option</th>
+        <td mat-cell *matCellDef="let element">
+          <button
+            mat-icon-button
+            class="btn"
+            (click)="openUpdateGroup(element)"
+          >
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button
+            mat-icon-button
+            class="btn"
+            (click)="openDeleteGroup(element)"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+
+    <!-- <mat-paginator
+      [pageSizeOptions]="[5, 10, 20]"
+      showFirstLastButtons
+      aria-label="Select page of periodic elements"
+      class="custom-pg"
+    ></mat-paginator> -->
+  </div>
+
+  <div *ngIf="btnName == 'Add Box'">
+    <table mat-table [dataSource]="treeservice.data">
+     
+      <ng-container matColumnDef="Boxname">
+        <th mat-header-cell *matHeaderCellDef>Boxname</th>
+        <td mat-cell *matCellDef="let element">{{ element.pageInfo.header}}</td>
+      </ng-container>
+
+      
+      <ng-container matColumnDef="Department">
+        <th mat-header-cell *matHeaderCellDef>Department</th>
+        <td mat-cell *matCellDef="let element">{{ element.pageInfo.partment }}</td>
+      </ng-container>
+
+      
+      <ng-container matColumnDef="Detail">
+        <th mat-header-cell *matHeaderCellDef>Detail</th>
+        <td mat-cell *matCellDef="let element">{{ element.pageInfo.detl }}</td>
+      </ng-container>
+
+      
+      <ng-container matColumnDef="Activeflag">
+        <th mat-header-cell *matHeaderCellDef>Activeflag</th>
+        <td mat-cell *matCellDef="let element">{{ element.activeFlg }}</td>
+      </ng-container>
+
+     
+      <ng-container matColumnDef="Option">
+        <th mat-header-cell *matHeaderCellDef>Option</th>
+        <td mat-cell *matCellDef="let element">
+          <button
+            mat-icon-button
+            class="btn"
+            (click)="openUpdateGroup(element)"
+          >
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button
+            mat-icon-button
+            class="btn"
+            (click)="openDeleteGroup(element)"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+
+    <!-- <mat-paginator
+      [pageSizeOptions]="[5, 10, 20]"
+      showFirstLastButtons
+      aria-label="Select page of periodic elements"
+      class="custom-pg"
+    ></mat-paginator> -->
+  </div>
+
+  <div *ngIf="btnName == 'Add Screen'">
+    <table mat-table [dataSource]="treeservice.data">
+      
+      <ng-container matColumnDef="Screenname">
+        <th mat-header-cell *matHeaderCellDef>Screenname</th>
+        <td mat-cell *matCellDef="let element">{{ element.pageInfo.header}}</td>
+      </ng-container>
+
+    
+      <ng-container matColumnDef="Url">
+        <th mat-header-cell *matHeaderCellDef>Url</th>
+        <td mat-cell *matCellDef="let element">{{ element.pageInfo.redirectURL }}</td>
+      </ng-container>
+
+      
+      <ng-container matColumnDef="Subgroup">
+        <th mat-header-cell *matHeaderCellDef>Subgroup</th>
+        <td mat-cell *matCellDef="let element">{{ element.pageInfo.subgroup }}</td>
+      </ng-container>
+
+      
+      <ng-container matColumnDef="Activeflag">
+        <th mat-header-cell *matHeaderCellDef>Activeflag</th>
+        <td mat-cell *matCellDef="let element">{{ element.activeFlg }}</td>
+      </ng-container>
+
+      
+      <ng-container matColumnDef="Option">
+        <th mat-header-cell *matHeaderCellDef>Option</th>
+        <td mat-cell *matCellDef="let element">
+          <button
+            mat-icon-button
+            class="btn"
+            (click)="openUpdateGroup(element)"
+          >
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button
+            mat-icon-button
+            class="btn"
+            (click)="openDeleteGroup(element)"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+
+    <!-- <mat-paginator
+      [pageSizeOptions]="[5, 10, 20]"
+      showFirstLastButtons
+      aria-label="Select page of periodic elements"
+      class="custom-pg"
+    ></mat-paginator> -->
   </div>
 </div>
